perf: pkl-lsp: remove -H:IncludeResources, rely on agent metadata